# repo-rater

./: .env.template  main.py  pyproject.toml
src/: db.sqlite3  manage.py
src/core/: admin.py  models.py  tables.py  tasks.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_repo_owner_alter_repo_name_and_more.py  0003_alter_repo_url.py
src/core/templates/core/: index.html
src/reporater/: asgi.py  settings.py  tasks.py  urls.py  wsgi.py
src/reporater/templates/: base.html
